tests/neg-custom-args/captures/lazyvals4.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/lazyvals4.scala:21:39 ------------------------------------
21 |  val v0:  () -> () -> String        = () => t.memberLazy     // error
   |                                       ^^^^^^^^^^^^^^^^^^
   |                                       Found:    () ->{t} () -> String
   |                                       Required: () -> () -> String
   |
   |                                       Note that capability `t` cannot flow into capture set {}.
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/lazyvals4.scala:23:39 ------------------------------------
23 |  val v1:  () -> String              = () => t.memberLazy()   // error
   |                                       ^^^^^^^^^^^^^^^^^^^^
   |                                       Found:    () ->{t} String
   |                                       Required: () -> String
   |
   |                                       Note that capability `t` cannot flow into capture set {}.
   |
   | longer explanation available when compiling with `-explain`
-- [E223] CaptureChecking Error: tests/neg-custom-args/captures/lazyvals4.scala:25:45 ----------------------------------
25 |  val v3: (() -> String)^{c.console} = () => c.memberLazy()   // error (but should this be allowed?)
   |                                             ^
   |                                    Reference `c` is not included in the allowed capture set {c.console}
   |                                    of an enclosing function literal with expected type () ->{c.console} String.
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/lazyvals4.scala:26:39 ------------------------------------
26 |  val v4:  () -> String              = () => t.memberMethod() // error
   |                                       ^^^^^^^^^^^^^^^^^^^^^^
   |                                       Found:    () ->{t} String
   |                                       Required: () -> String
   |
   |                                       Note that capability `t` cannot flow into capture set {}.
   |
   | longer explanation available when compiling with `-explain`
